# architect_akos

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  akos.sln  akos.vcxproj  logging.cpp
data/: onegin.txt
docs/exmpls/logging/: lev_log_exmpl.cpp  log_exmpl.cpp
docs/exmpls/mathtools/: solve_linear_exmpl.cpp  solve_square_exmpl.cpp
lib/: file_tools.h  filelineprocesser.h  filereader.h  logging.h  mathtools.h  polynom.h  utility.h
src/: file_tools.c  file_tools.cpp  filelineprocesser.cpp  filereader.cpp  main.cpp  mathtools.cpp  polynom.cpp  utility.cpp  utility.hpp
tasks/: task_1.cpp  task_2.cpp
tasks/task_1/include/: mathtools.h
tasks/task_1/src/: mathtools.cpp  polynom.cpp
tasks/task_1/tests/: mt_test.cpp
tasks/task_2/: task_2.cpp
tasks/task_2/include/: file_tools.h  filelineprocesser.h  my_string_view.h  smart_descriptor.h
tasks/task_2/src/: file_tools.cpp  filelineprocesser.cpp  smart_descriptor.cpp
tasks/task_3/: stack.hpp  task3.cpp
tasks/task_3/include/: MemProtector.hpp  ProtectedCArray.hpp  stack.hpp
tasks/task_4/: readme.md
tasks/task_4/CpuEmulator/: CpuEmulator.sln
tasks/task_4/CpuEmulator/CpuEmulator/: CpuEmulator.vcxproj  CpuEmulator.vcxproj.filters  test_prog.txt  twitch_lang.mdown
tasks/task_4/include/: CodeLoader.h  Compiler.h  cpuemu-cmd-defs.h  cpuemu-cmds.h  cpuemu.h  twitchLangCompiler.h
tasks/task_4/src/: Compiler.cpp  codeloader.cpp  cpuemu.cpp  main.cpp  twitchLangCompiler.cpp
tasks/task_5/: README.md
tasks/task_5/differentiator/: differentiator.sln
tasks/task_5/differentiator/differentiator/: differentiator.vcxproj
tasks/task_5/include/: Tree.h  expression_parser.h  node-types-defs.h
tasks/task_5/src/: Tree.cpp  expression_parser.cpp  main.cpp
tasks/task_6/grammatic-parser-generator/: grammatic-parser-generator.sln
tasks/task_6/grammatic-parser-generator/grammatic-parser-generator/: grammatic-parser-generator.vcxproj
tasks/task_6/src/: main.cpp
tests/: mt_test.cpp
